2001-12-29 Andreas Andersson (e92_aan@e.kth.se)

	* src/gerb_file.c:
	  Fixed gerb_fgetstring() to not write after the end of the
	  allocated array.
	* src/gerber.c:
	  Removed small memory leak in parse_aperture_definition()


2001-12-29 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c:
	  Autodetection routine changed back to original style to allow
	  special cases needed with output from some CAD systems.
	* src/gerb_file.c:
	  Error check for mmap() added to stop gerbv from segdumping
	  when trying to open a directory instead of a file.


2001-12-29 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_file.[hc], src/gerber.c: Added function 
	  gerb_fgetstring and used it.

	
2001-12-14 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c : Removed gdk_gc_set_line_attribute when drawing
	  a point.
	* src/gerbv.c: Added autoscaling and autocentering, both as
	  a menu option (Zoom/Fit) and when loading a file.

	
2001-12-11 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c : Removed prelighting on buttons and changed
	  the "random function" creating colors. Also fixed "clear 
	  all" remaining after the pan speedup rewrite.

	
2001-12-10 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c : Forgot to check if we had any pixmap to draw.

	
2001-12-09 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Fixed small bug in min/max calculation
	  which caused big problems.
	* src/gerbv.c: Major rewrite of panning code giving major
	  improvements in screen update speed.
	

2001-12-07 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.[hc], src/gerbv.c : Pseudo optimized drawing.
	* src/gerb_file.c, src/gerbv.c: Fixed bug causing segfault
	  when file didn't exist (oops) and pushed error messages
	  out of gerb_file.c. And if a file (of many) given at 
	  commandline doesn't exist, the next file is tried instead 
	  of halting.

	
2001-12-06 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.c, src/gerb_image.c, src/gerber.c, src/gerbv.c: